# cortex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  readme.md
configuration/: config.yaml
include/: CommandHandler.h  EngineFactory.hpp  InferenceEngine.hpp  LlamaInferenceEngine.h  LlamaPyInferenceEngine.h  Logger.hpp  PlanValidator.h  TaskPlanner.h
src/: CommandHandler.cpp  LlamaInferenceEngine.cpp  LlamaPyInferenceEngine.cpp  PlanValidator.cpp  TaskPlanner.cpp  main.cpp  test.cpp
